--- a/src/sass/custom/custom.scss
+++ b/src/sass/custom/custom.scss
@@ -1,4 +1,5 @@
 @import './components/card.scss';
+@import './components/grid.scss';
 @import './components/reset.scss';
 @import './components/song-card.scss';
 @import './components/songs.scss';
