added init songPlayer

--- a/src/sass/custom/custom.scss
+++ b/src/sass/custom/custom.scss
@@ -2,6 +2,8 @@
 @import './components/grid.scss';
 @import './components/reset.scss';
 @import './components/song-card.scss';
+@import './components/song-details.scss';
+@import './components/song-player.scss';
 @import './components/songs.scss';
 @import './components/type.scss';
 @import './components/content.scss';
