--- a/src/sass/custom/components/song-player.scss
+++ b/src/sass/custom/components/song-player.scss
@@ -13,9 +13,43 @@
     padding: 8px;
 }
 
+.song-player-main-info {
+    width: 200px;
+    margin-right: 40px;
+}
+
 .song-player-image {
     width: 50px;
     height: 40px;
     float: left;
     margin-right: 8px;
+}
+
+.song-player-controls {
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    align-items: center;
+}
+
+.song-player-button {
+    padding: 4px;
+    color: #ccc;
+
+    &:hover {
+        color: #222;
+        cursor: pointer;
+
+        .ion-ios-pause {
+            color: #000;
+        }
+    }
+
+    & + .song-player-button {
+        margin-left: 30px;
+    }
+
+    .ion-ios-pause {
+        color: #000;
+    }
 }
