--- a/src/sass/custom/components/song-player.scss
+++ b/src/sass/custom/components/song-player.scss
@@ -27,7 +27,7 @@
 
 .song-player-controls {
     display: flex;
-    flex: 1;
+    // flex: 1;
     flex-direction: row;
     align-items: center;
 }
@@ -52,4 +52,36 @@
     .ion-ios-pause {
         color: #000;
     }
+}
+
+.song-player-seek {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    margin-left: 30px;
+}
+
+.song-player-seek-bar {
+    position: relative;
+    flex: 1;
+    height: 2px;
+    background-color: #ddd;
+}
+
+.song-player-seek-duration-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background-color: #86D26F;
+}
+
+.song-player-time {
+    margin-left: 30px;
+    color: #ccc;
+    font-size: 11px;
+}
+
+.song-player-time-divider {
+    margin: 0 10px;
 }
